--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql-yoga": "^1.18.1",
     "merge-graphql-schemas": "^1.7.0",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
     "prisma-client-lib": "^1.34.5"
   },
   "devDependencies": {
